boot: add config parser

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -1,1 +1,9 @@
-include boot/inih/Makefile.static
+
+CC := $(CROSS_COMPILE)gcc
+CFLAGS := -g -Wall -Werror -Ilibufdt/include
+
+inih/libinih.a:
+	$(MAKE) -C inih
+
+config: gpio.c llist.c config.c inih/libinih.a
+	$(CC) $(CFLAGS) -DCONFIG_TEST -o $@ $^
