import libufdt from AOSP
commit 3343e8bb61b8e3c67d4f507cf31166852e395601

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -5,5 +5,8 @@ CFLAGS := -g -Wall -Werror -Ilibufdt/include
 inih/libinih.a:
 	$(MAKE) -C inih
 
+libufdt/libufdt.so:
+	$(MAKE) -C libufdt
+
 config: gpio.c llist.c config.c inih/libinih.a
 	$(CC) $(CFLAGS) -DCONFIG_TEST -o $@ $^
