boot: update sample configuration

--- a/boot/sample.ini
+++ b/boot/sample.ini
@@ -4,6 +4,7 @@ rootdir=/mnt/root/boot
 zImage=zImage-midas
 initramfs=initramfs-linux-midas.img
 dtbs=dtbs-midas
+cmdline=console=ttySAC2,115200 earlyprintk rw
 
 [t0]
 name=Galaxy Note II
@@ -25,3 +26,13 @@ bank=gpf1
 pin=0
 # LOW means ea8061
 value=0
+
+[m0]
+name=Galaxy S III 3G
+model=I9300
+dtbs=exynos4412-m0.dtb
+
+[m3]
+name=Galaxy S III 4G
+model=I9305
+dtbs=exynos4412-m3.dtb
