clean up makefiles

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -1,7 +1,6 @@
 
-CC := $(CROSS_COMPILE)gcc
-CFLAGS := -g -Wall -Werror -Ilibufdt/include -I.
-LINKER_DIR ?= /usr/lib
+CC ?= $(CROSS_COMPILE)gcc
+LOCAL_CFLAGS := -g -Wall -Werror -I./libufdt/include -I.
 
 inih/libinih.a:
 	$(MAKE) -C inih
@@ -10,22 +9,22 @@ libufdt/libufdt.so:
 	$(MAKE) -C libufdt libufdt.so
 
 boot: config.o gpio.o main.c llist.o ufdt.o util.o inih/libinih.a libufdt/libufdt.so
-	$(CC) $(CFLAGS) -o $@ main.c config.o gpio.o llist.o ufdt.o util.o inih/libinih.a -L$(LINKER_DIR) -l:libfdt.so -Llibufdt -l:libufdt.so
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ main.c config.o gpio.o llist.o ufdt.o util.o inih/libinih.a -l:libfdt.so -Llibufdt -l:libufdt.so
 
 config.o: config.c config.h
-	$(CC) $(CFLAGS) -c -o $@ config.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ config.c
 
 gpio.o: gpio.c gpio.h
-	$(CC) $(CFLAGS) -c -o $@ gpio.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ gpio.c
 
 llist.o: llist.c llist.h
-	$(CC) $(CFLAGS) -c -o $@ llist.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ llist.c
 
 ufdt.o: ufdt.c ufdt.h
-	$(CC) $(CFLAGS) -c -o $@ ufdt.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ ufdt.c
 
 util.o: util.c util.h
-	$(CC) $(CFLAGS) -c -o $@ util.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ util.c
 
 clean:
 	rm -f *.o boot
