--- a/boot/libufdt/Makefile
+++ b/boot/libufdt/Makefile
@@ -1,13 +1,13 @@
-CC = $(CROSS_COMPILE)gcc
-CFLAGS = -Wall -Werror -Iinclude -Isysdeps/include -fPIC
+CC ?= $(CROSS_COMPILE)gcc
+LOCAL_CFLAGS = -Wall -Werror -Iinclude -Isysdeps/include -fPIC
 FILES := $(wildcard *.c)
 OBJS := $(patsubst %.c,%.o,$(FILES))
-LINKER_DIR ?= /usr/lib
+
 sysdeps/libufdt_sysdeps.a:
 	$(MAKE) -C sysdeps
 
 libufdt.so: sysdeps/libufdt_sysdeps.a $(FILES)
-	$(CC) $(CFLAGS) -o $@ $(FILES) -L$(LINKER_DIR) -shared -l:libfdt.so -Lsysdeps -l:libufdt_sysdeps.a
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ $(FILES) -shared -l:libfdt.so -L./sysdeps -l:libufdt_sysdeps.a
 
 all: libufdt.so
 
