boot: add support for booting an Android boot.img
bootimg.h taken from LineageOS android_system_core commit
33a4484a29bede8ffa65b6c11baa0a3157bc9792

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -8,14 +8,20 @@ inih/libinih.a:
 libufdt/libufdt.so:
 	$(MAKE) -C libufdt libufdt.so
 
-boot: config.o gpio.o main.c llist.o ufdt.o util.o inih/libinih.a libufdt/libufdt.so
-	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ main.c config.o gpio.o llist.o ufdt.o util.o inih/libinih.a -l:libfdt.so -Llibufdt -l:libufdt.so
+boot: config.o bootimage.o gpio.o kernel.o main.c llist.o ufdt.o util.o inih/libinih.a libufdt/libufdt.so
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ main.c bootimage.o config.o gpio.o kernel.o llist.o ufdt.o util.o inih/libinih.a -l:libfdt.so -Llibufdt -l:libufdt.so
+
+bootimage.o: bootimage.c bootimage.h
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ bootimage.c
 
 config.o: config.c config.h
 	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ config.c
 
 gpio.o: gpio.c gpio.h
 	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ gpio.c
+
+kernel.o: kernel.c kernel.h
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ kernel.c
 
 llist.o: llist.c llist.h
 	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ llist.c
