boot: update sample configuration file

--- a/boot/sample.ini
+++ b/boot/sample.ini
@@ -1,38 +1,36 @@
 [global]
-devices=t0,m0,m3
-rootdir=/mnt/root/boot
+devices=n710x,i9300,i9305
+rootdir=/bootdata
 zImage=zImage-midas
 initramfs=initramfs-linux-midas.img
 dtbs=dtbs-midas
 cmdline=console=ttySAC2,115200 earlyprintk rw
 
-[t0]
+[n710x]
 name=Galaxy Note II
 model=N7100,N7105
-dtbs=exynos4412-t0.dtb,exynos4412-midas.dtb
+dtbs=exynos4412-n710x.dtb
 
-[t0.overlay.s6evr02]
-path=exynos4412-t0-s6evr02.dtbo
-mode=gpio
-bank=gpf1
-pin=0
-# HIGH means s6evr02
+[n710x.overlay.s6evr02]
+path=overlay/exynos4412-n710x-s6evr02.dtbo
+mode=cmdline
+key=lcdtype
+# lcdtype=1 means s6evr02
 value=1
 
-[t0.overlay.ea8061]
-path=exynos4412-t0-ea8061.dtbo
-mode=gpio
-bank=gpf1
-pin=0
-# LOW means ea8061
+[n710x.overlay.ea8061]
+path=overlay/exynos4412-n710x-ea8061.dtbo
+mode=cmdline
+key=lcdtype
+# lcdtype=0 means ea8061
 value=0
 
-[m0]
+[i9300]
 name=Galaxy S III 3G
 model=I9300
-dtbs=exynos4412-m0.dtb
+dtbs=exynos4412-i9300.dtb
 
-[m3]
+[i9305]
 name=Galaxy S III 4G
 model=I9305
-dtbs=exynos4412-m3.dtb
+dtbs=exynos4412-i9305.dtb
