boot: rework overlays
overlays are now global, and include a "device" field,
so one overlay can be shared between multiple devices.

--- a/boot/sample.ini
+++ b/boot/sample.ini
@@ -11,14 +11,16 @@ name=Galaxy Note II
 model=N7100,N7105
 dtbs=exynos4412-n710x.dtb
 
-[n710x.overlay.s6evr02]
+[overlay.s6evr02]
+devices=n7100,n7105
 path=overlay/exynos4412-n710x-s6evr02.dtbo
 mode=cmdline
 key=lcdtype
 # lcdtype=1 means s6evr02
 value=1
 
-[n710x.overlay.ea8061]
+[overlay.ea8061]
+devices=n7100,n7105
 path=overlay/exynos4412-n710x-ea8061.dtbo
 mode=cmdline
 key=lcdtype
