boot: refactor cmdline handling

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -8,8 +8,8 @@ inih/libinih.a:
 libufdt/libufdt.so:
 	$(MAKE) -C libufdt libufdt.so
 
-boot: config.o bootimage.o gpio.o kernel.o main.c llist.o ufdt.o util.o inih/libinih.a libufdt/libufdt.so
-	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ main.c bootimage.o config.o gpio.o kernel.o llist.o ufdt.o util.o inih/libinih.a -l:libfdt.so -Llibufdt -l:libufdt.so
+boot: cmdline.o config.o bootimage.o gpio.o kernel.o main.c llist.o ufdt.o util.o inih/libinih.a libufdt/libufdt.so
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -o $@ main.c cmdline.o bootimage.o config.o gpio.o kernel.o llist.o ufdt.o util.o inih/libinih.a -l:libfdt.so -Llibufdt -l:libufdt.so
 
 bootimage.o: bootimage.c bootimage.h
 	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ bootimage.c
@@ -31,6 +31,9 @@ ufdt.o: ufdt.c ufdt.h
 
 util.o: util.c util.h
 	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ util.c
+
+cmdline.o: cmdline.c cmdline.h
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -c -o $@ cmdline.c
 
 clean:
 	rm -f *.o boot
