boot: support preserving commandline options
this is useful because the bootloader gives us information like
the serial number and bootloader version on the command line,
and we probably want to expose this to the "real" kernel.

--- a/boot/sample.ini
+++ b/boot/sample.ini
@@ -5,6 +5,7 @@ zImage=zImage-midas
 initramfs=initramfs-linux-midas.img
 dtbs=dtbs-midas
 cmdline=console=ttySAC2,115200 earlyprintk rw
+cmdline_keep=androidboot.bootloader,androidboot.serialno
 
 [n710x]
 name=Galaxy Note II
