boot: fix sample configuration

--- a/boot/sample.ini
+++ b/boot/sample.ini
@@ -7,10 +7,15 @@ dtbs=dtbs-midas
 cmdline=console=ttySAC2,115200 earlyprintk rw
 cmdline_keep=androidboot.bootloader,androidboot.serialno
 
-[n710x]
-name=Galaxy Note II
-model=N7100,N7105
-dtbs=exynos4412-n710x.dtb
+[n7100]
+name=Galaxy Note II 3G
+model=N7100
+dtbs=exynos4412-n7100.dtb,exynos4412-n710x.dtb
+
+[n7105]
+name=Galaxy Note II LTE
+model=N7105
+dtbs=exynos4412-n7105.dtb,exynos4412-n710x.dtb
 
 [overlay.s6evr02]
 devices=n7100,n7105
